# knuth-bendix-completion

./: .gitignore  Auth.hs  Commands.hs  DiagramWrapper.hs  Diagrams.hs  KnuthBendixCompletion.hs  LICENSE  Main.hs  Parser.hs  ParserTests.hs  Persistance.hs  ResponseTemplates.hs  Test.hs  compile.sh  kbc.cabal  kbcompletion.hs  knuthbendixcompletion.hs  test.hs
Auth/: Datatypes.hs
KnuthBendixCompletion/: Algorithm.hs  Datatypes.hs  Test.hs  Tests.hs
