name:                kbc
version:             0.1.0.0
synopsis:            Knuth Bendix completion algorithm wrapped in web server
license:             BSD3
license-file:        LICENSE
author:              Mikołaj Fejzer
maintainer:          mfejzer@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable kbc
  main-is:           Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -v
  build-depends:     base >= 4.7 && < 5
                   , mtl >= 2.0.0
                   , acid-state >= 0.6.0
                   , safecopy >= 0.6.0
                   , containers >= 0.4.0
                   , happstack-server >= 7.0.0
                   , blaze-markup >= 0.5.0
                   , blaze-html >= 0.5.0
                   , random >= 1.0.0
                   , parsec >= 3.1.0
                   , diagrams-lib >= 0.5.0
                   , diagrams-canvas >= 0.1.0
                   , diagrams-contrib >= 0.1.0
                   , diagrams-cairo >= 0.5.0
                   , diagrams-core >= 0.5.0
  default-language:  Haskell2010

